argocd/platform/identity/authentik/prereqs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    trust.home.arpa/enabled: "true"
